# SelfOrganisingMaps

./: .gitignore  CMakeLists.txt  README.md
configs/: config.json  genTestPatterns.py  requirements.txt
sim/: CMakeLists.txt  gcal.cpp  plot.cpp  plot.h  topo.h
